# Aquavolt

./: README.md  index.html  package.json
.githooks/: pre-push
.github/workflows/: release.yml
pi/: README.md  app.py  bluetooth_serial.py  index.html  pi_server.py  requirements.txt  test_system.py
src/: App.tsx  version.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/components/charts/: CurrentChart.tsx  NaOClChart.tsx  PowerChart.tsx  ProgressRing.tsx
src/components/controls/: ConcentrationSlider.tsx  DeployButton.tsx  PowerSlider.tsx  StartStopButton.tsx  VolumeSelect.tsx
src/components/layout/: RightPanel.tsx  Sidebar.tsx  TopBar.tsx
src/components/stats/: StatsGrid.tsx
src/hooks/: usePiConnection.ts  useSession.ts
src/i18n/: af.ts  ar.ts  bn.ts  de.ts  en.ts  es.ts  fr.ts  hi.ts  id.ts  pt.ts  ru.ts  sw.ts  yo.ts  zh.ts
src/store/: appStore.ts
src/styles/: globals.css
src/tabs/: SessionLog.tsx  Settings.tsx
src/types/: index.ts
src/utils/: constants.ts
